# irisRecognition

./: .gitignore  README.md  demo.py  demo_server.py  openssl_iris.cnf  start_server.ps1
client/: CMakeLists.txt  build_client.bat  main.cpp
client/capture/: CameraCapture.cpp  CameraCapture.h
client/config/: ClientConfig.h
client/network/: ServerClient.cpp  ServerClient.h
client/preprocessing/: ImageQualityCheck.cpp  ImageQualityCheck.h  Segmentation.cpp  Segmentation.h
client/protocol/: Message.h
client/security/: Encryptor.cpp  Encryptor.h
client/tools/: iris_admin_gui.cpp  iris_gate_gui.cpp
client/ui/: Display.cpp  Display.h
database/: IrisDB.h  schema.sql  seed_data.ps1
server/: CMakeLists.txt  build_all.bat  enroll_tool.cpp  main.cpp  vcpkg.json
server/config/: ServerConfig.cpp  ServerConfig.h  config.json
server/database/: DatabaseManager.cpp  DatabaseManager.h  IUserRepository.h
server/iris/: FeatureExtractor.cpp  FeatureExtractor.h  IrisMatcher.cpp  IrisMatcher.h  IrisProcessor.cpp  IrisProcessor.h  LogGabor.cpp  LogGabor.h  Normalization.cpp  Normalization.h  Segmentation.cpp  Segmentation.h
server/models/: AuthResult.h  IrisCode.cpp  IrisCode.h  User.h
server/network/: ConnectionHandler.cpp  ConnectionHandler.h  TcpServer.cpp  TcpServer.h
server/protocol/: Message.h  RequestValidator.h
server/security/: Encryptor.cpp  Encryptor.h  ReplayGuard.cpp  ReplayGuard.h
server/service/: BiometricService.cpp  BiometricService.h
server/utils/: AccessLogger.cpp  AccessLogger.h  Logger.cpp  Logger.h  ThreadPool.cpp  ThreadPool.h
